--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.10"
 dependencies = [
     "django-crispy-forms>=2.3",
     "django (>=4.2,<6.0.0)",
+    "crispy-bootstrap5 (>=2024.10,<2025.0)",
 ]
 classifiers = [
     "Environment :: Web Environment",
