--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "django-crispy-forms>=2.3",
     "django (>=4.2,<6.0.0)",
     "crispy-bootstrap5 (>=2024.10,<2025.0)",
+    "pyyaml (>=6.0.2,<7.0.0)",
 ]
 classifiers = [
     "Environment :: Web Environment",
