--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,4 +46,4 @@ poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
 [tool.poetry-dynamic-versioning]
 enable = true
 vcs = "git"
-style = "pep440"
+format = "{base}.{revision}{distance}"
