Rename the module django_crisp_modals to crisp_modals for easier import and update references in templates, forms, and settings. The package name remains django-crisp-modals.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ authors = [
     {name = "Michel Fodje",email = "michel4j@gmail.com"}
 ]
 readme = "README.md"
+homepage = "https://github.com/michel4j/django-crisp-modals"
 license = "MIT"
 requires-python = ">=3.10"
 dependencies = [
